# AB_Course

./: .gitignore  README.md  pyproject.toml
HW_1/: HW_1.ipynb
HW_2/: HW_2.ipynb
HW_2/data/: df_hw.csv
lecture_materials/: Seminar_1_Intro.ipynb  Seminar_2_AB.ipynb  Seminar_3_Design_AB_in_reallife.ipynb  Seminar_4_AB_FAST.ipynb  end_to_end_task.ipynb
