[tool.poetry]
name = "ab"
version = "0.1.0"
description = ""
authors = ["Anastasia K. <nkaliman00@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
scipy = "^1.14.1"
tqdm = "^4.67.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
scikit-learn = "^1.6.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
